<resources>
    <string name="app_name">AlcoCalendar</string>

    <string name="backToDateButton">Back to current date</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <string name="in_this_year_you_drank">Drunk days in this year</string>
    <string name="longest_drink_marathon_in_this_year">Longest drink marathon in this year</string>
    <string name="longest_drink_marathon_all_time">Longest drink marathon for all time</string>

    <string name="login_to_sync">Login to sync</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="share_calendar">Share</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="contact_access_description">Contact access</string>
    <string name="contact_access_message">Need access to contacts to share with your calendar</string>
    <string name="allow_access">Allow</string>
    <string name="no_thanks">No, thanks</string>
    <string name="close">Close</string>
    <string name="auto_theme_switch">System</string>
    <string name="app_theme">App theme:</string>
    <string name="day">Day</string>
    <string name="night">Night</string>

    <string name="calendar_bottom">Calendar</string>
    <string name="friends_bottom">Friends</string>
    <string name="settings_bottom">Settings</string>
    <string name="back_again_to_exit">Press \"Back\" again to exit</string>
    <string name="login_to_see_friends_calendars">Login to see friends calendars</string>
    <string name="select_friend">Select friend</string>
    <string name="nobody_shared">Seems like nobody shared calendar with you</string>
    <string name="block_this_person">Block</string>
    <string name="delete_text">Are you sure you want delete</string>
    <string name="delete">Delete</string>
    <string name="no_contacts">No contacts with emails in your phonebook</string>
    <string name="enter_e_mail">Enter e-mail or Nickname</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="nick_name">Nickname</string>
    <string name="black_list">Black list</string>
    <string name="empty_black_list">Black list is empty</string>
    <string name="you_are_in_black_list">You are in black list of this user</string>
    <string name="no_connection">No connection! Get offline data…</string>
    <string name="longest_fresh_marathon_in_this_year">Longest fresh marathon in this year</string>
    <string name="longest_fresh_marathon_all_time">Longest fresh marathon for all time</string>
    <string name="nickname_is_busy">Nickname is busy!</string>
    <string name="no_internet">No connection!</string>
    <string name="remove_space">Remove \"space\"</string>
    <string name="network_offline">No connection! Try again later.</string>
    <string name="exit">Exit</string>
    <string name="update">Update app!</string>
    <string name="shared_with_you">shared with you!</string>
    <string name="removed_from_friends">removed you from friends!</string>
    <string name="drunk">drunk</string>
    <string name="drunk_a_little">drunk a little</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="shared">Shared</string>
    <string name="shared_notifications">Notifications when someone shared with you.</string>
    <string name="drunk_channel">Drunk</string>
    <string name="drunk_notifications">Notifications when friend drunk.</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="how_much_did_you_drink">How much did you drink?</string>
    <string name="a_lot">A lot</string>
    <string name="a_little">A little</string>
    <string name="i_didn_t">I didn\'t</string>

</resources>