<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="?android:attr/actionBarSize"
        tools:context=".view.SettingsFragment">

        <com.google.android.material.card.MaterialCardView style="@style/CardLayoutStyle">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/userLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@drawable/common_google_signin_btn_icon_light_normal" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        tools:text="@string/login_to_sync" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonSize="wide" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/logoutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardLayoutStyle"
            android:layout_height="wrap_content">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/shareFragmentContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardLayoutStyle"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_theme" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/auto_theme_switch" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/themeChips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:checkedChip="@id/chipDay"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:enabled="false"
                        android:text="@string/day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:enabled="false"
                        android:text="@string/night" />
                </com.google.android.material.chip.ChipGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>